# Taal

./: .gitignore  AGENTS.md  Cargo.toml  PR_SUMMARY.md  README.md
apps/desktop/: Cargo.toml
apps/desktop/src/: main.rs
crates/audio/: Cargo.toml
crates/audio/src/: analysis.rs  backend.rs  dsp.rs  io.rs  lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: error.rs  events.rs  io.rs  lesson.rs  lib.rs  tempo.rs
crates/notation/: Cargo.toml
crates/notation/src/: lib.rs
crates/services/: Cargo.toml
crates/services/src/: lib.rs
crates/transcriber/: Cargo.toml
crates/transcriber/src/: lib.rs  notation.rs  pipeline.rs  tempo.rs
crates/tutor/: Cargo.toml
crates/tutor/src/: analytics.rs  lib.rs  midi.rs  scoring.rs  session.rs
crates/ui/: Cargo.toml
crates/ui/src/: icons.rs  lib.rs  theme.rs
docs/: ARCHITECTURE.md  ASSETS.md  DESIGN_PHILOSOPHY.md  LOW_LEVEL_DESIGN.md  UI_DESIGN.md  UX_OVERVIEW.md  UX_SPECS.md
tools/dataset-pipeline/: Cargo.toml
tools/dataset-pipeline/src/: main.rs
