[package]
name = "taal-services"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
description = "Networking and marketplace services for Taal"

[dependencies]
anyhow.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest = { version = "0.11", features = ["json"] }
tokio.workspace = true

[dependencies.taal-domain]
path = "../domain"
