[package]
name = "dataset-pipeline"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
description = "Utilities for preparing drum dataset annotations"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true

[dependencies.taal-domain]
path = "../../crates/domain"
